# mp3tg

./: README.md  main.py  main_2.py  pars.py  pyproject.toml
assets/: vars.py
telegram/: bot.py  keyboard.py
